# CakeCapture

./: .gitignore  Makefile  README.md  cakecapture_db_0509.sql  cakecapture_db_0510.sql  cakecapture_db_0513.sql  cleanDB-0513.sql  cleanDB.sql  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
accounts/: __init__.py  admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_newuser_birthday.py  0002_alter_profile_country.py  0002_initial.py  0002_usercoupon_profile_coupon.py  0003_alter_usercoupon_expired_at_alter_usercoupon_used_at.py  0003_alter_usercoupon_used_at.py  0003_initial.py  0003_profile_old_cart.py  0003_profile_profile_pic.py  0003_rename_county_newuser_country.py  0004_profile_full_name.py
cart/: cart.py  urls.py  views.py
carts/: cart.py  urls.py  views.py
chat/: consumers.py  forms.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_chatgroup_group_name.py  0003_alter_chatgroup_group_name_and_more.py  0004_remove_chatgroup_is_private_remove_chatgroup_members_and_more.py
chats/: consumers.py  urls.py  views.py
chats/migrations/: 0001_initial.py
core/: .env.example  __init__.py  asgi.py  celery.py  settings.py  urls.py
coupons/: admin.py  apps.py  forms.py  models 2.py  models.py  signals.py  urls.py  views.py
coupons/migrations/: 0001_initial.py  0002_alter_coupon_expired_at.py  0002_initial.py  0003_alter_coupon_expired_at.py  (+4 more)
feedbacks/: forms.py  models.py  urls.py  views.py
managements/: context_processors.py  urls 2.py  urls.py  views.py
messagememos/: admin.py  apps.py  urls.py  views.py
mock_data/: 0514cleanDB.sql  mock_data_0521.sql
order/: admin.py  forms.py  models.py  urls.py  views.py
orders/: admin.py  ecpay_payment_sdk.py  form.py  forms.py  line_pay.py  linepay.py  models.py  signals.py  tasks.py  urls.py  views.py
pages/: urls.py  views.py
products/: admin.py  admin_forms.py  context_processors.py  custom_fields.py  forms.py  models.py  urls.py  views.py
seed/: 0001_products.json
src/scripts/: alert.js  (+3 more)
store/: form.py  models.py  urls.py  views.py
(+135 files in other folders)
