[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Chien Chuan Wang <chien@chienchuan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-allauth = {extras = ["socialaccount"], version = "^0.62.1"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
django-environ = "^0.11.2"
pillow = "^10.3.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
