[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Cake Capture"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-allauth = {extras = ["socialaccount"], version = "^0.62.1"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
django-environ = "^0.11.2"
pillow = "^10.3.0"
rich = "^13.7.1"
shortuuid = "^1.0.13"
channels = {extras = ["daphne"], version = "^4.1.0"}
django-htmx = "^1.17.3"
django-storages = {extras = ["boto3"], version = "^1.14.3"}
django = "^5.0.6"
line-bot-sdk = "^3.11.0"
django-seed = "^0.3.1"
plotly = "^5.22.0"
line-pay = "^0.2.0"
transitions = "^0.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
